added font awesome 4.7.0

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -420,6 +420,7 @@ html
                                             +TitleForButtonsAndInputs() Комфорт
                                         +DescriptionForButtonsAndInputs() Шумопоглощающие стены
                                 +FigureDescriptionBlock-Hr()
+                                //div.HR.FigureDescriptionBlock-Separator
                         +Wrapper-DescriptionBlockFacilities()
                             +FigureDescriptionBlock()
                                 +FigureDescriptionBlock-Wrapper()
@@ -553,8 +554,7 @@ html
                                                 +Button()
                                                     +Button-Content()
                                                         +GradientButton()
-                                                            +GradientButton-Btn()
-                                                                span click me
+                                                            +GradientButton-Btn() click me
                                             +Button()
                                                 +Button-Content.Button-Content_active()
                                                     +GradientButton()
@@ -567,9 +567,8 @@ html
                                                 +Button-GhostBtn.Button-GhostBtn_active() click me
                                         +ButtonsBlock-WrapperForSamples()
                                             +PayButton()
-                                                +PayButton-Content()
-                                                    +PayButton-Text() перейти к оплате
-                                                    +PayButton-Arrow() arrow_forward
+                                                +PayButton-Text() перейти к оплате
+                                                +PayButton-Arrow() arrow_forward
                                 //+PaginationBlock()
                                 +Wrapper-Pagination()
                                     +Wrapper-PaginationTitle()
