--- a/Common.blocks/Fonts/Fonts.scss
+++ b/Common.blocks/Fonts/Fonts.scss
@@ -1,3 +1,5 @@
+@import 'font-awesome-4.7.0/scss/font-awesome';
+
 @font-face {
   font-family: "Quicksand";
   src: url('./Quicksand/Quicksand-Bold.eot'); /* IE9 Compat Modes */
@@ -111,3 +113,5 @@
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
+
+
