--- a/Common.blocks/PayButton/PayButton.scss
+++ b/Common.blocks/PayButton/PayButton.scss
@@ -30,6 +30,18 @@
     margin: 0;
     cursor: pointer;
     border-radius: 22px;
+
+    width: 320px;
+    height: 44px;
+    display: flex;
+    flex-direction: row;
+    background: $DatepickerGradient;
+    justify-content: center;
+    align-items: center;
+    padding: 0 35px;
+    border-radius: 22px;
+    position: relative;
+    box-sizing: border-box;
   }
 }
 
