--- a/pages/index.scss
+++ b/pages/index.scss
@@ -328,3 +328,17 @@
 @import '../Common.blocks/FormElements/-DropdownFacilities/_expanded/FormElements-DropdownFacilities_expanded';
 
 @import '../Common.blocks/FieldOfSignIn/_widthFacilities/FieldOfSignIn_widthFacilities';
+
+@import '../Common.blocks/FormElements/-ExpandableCheckboxListRollUp/FormElements-ExpandableCheckboxListRollUp';
+@import '../Common.blocks/CheckboxList/CheckboxList';
+@import '../Common.blocks/CheckboxList/-Header/CheckboxList-Header';
+@import '../Common.blocks/CheckboxList/-Icon/CheckboxList-Icon';
+@import '../Common.blocks/CheckboxList/-ExpandableCnt/CheckboxList-ExpandableCnt';
+@import '../Common.blocks/CheckboxList/-ExpandableCnt/_active/CheckboxList-ExpandableCnt_active';
+@import '../Common.blocks/Checkbox/Checkbox';
+@import '../Common.blocks/Checkbox/_active/Checkbox_active';
+@import '../Common.blocks/List/-Text/List-Text';
+@import '../Common.blocks/RoomDetails/RoomDetails';
+@import '../Common.blocks/RoomDetails/-Icon/RoomDetails-Icon';
+@import '../Common.blocks/ListItemDescr/ListItemDescr';
+@import '../Common.blocks/ListItemDescr/-Header/ListItemDescr-Header';
