--- a/Common.blocks/Checkbox/Checkbox.scss
+++ b/Common.blocks/Checkbox/Checkbox.scss
@@ -1,41 +1,50 @@
 @media only screen and (max-width: 576px) {
-  .CheckboxList {
+  .Checkbox {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .CheckboxList {
+  .Checkbox {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .CheckboxList {
+  .Checkbox {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .CheckboxList {
+  .Checkbox {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .CheckboxList {
-
+  .Checkbox {
+    -webkit-appearance: none;
+    width: 20px;
+    height: 20px;
+    position: relative;
+    background: $background;
+    /* Dark 25% */
+    border: 1px solid $DatepickerArrowColor;
+    box-sizing: border-box;
+    border-radius: 4px;
+    margin: 0;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .CheckboxList {
+  .Checkbox {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .CheckboxList {
+  .Checkbox {
 
   }
 }
