--- a/Common.blocks/CheckboxList/-ExpandableCnt/CheckboxList-ExpandableCnt.scss
+++ b/Common.blocks/CheckboxList/-ExpandableCnt/CheckboxList-ExpandableCnt.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .CheckboxList {
+  .CheckboxList-ExpandableCnt {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .CheckboxList {
+  .CheckboxList-ExpandableCnt {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .CheckboxList {
+  .CheckboxList-ExpandableCnt {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .CheckboxList {
+  .CheckboxList-ExpandableCnt {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .CheckboxList {
-
+  .CheckboxList-ExpandableCnt {
+    display: none;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .CheckboxList {
+  .CheckboxList-ExpandableCnt {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .CheckboxList {
+  .CheckboxList-ExpandableCnt {
 
   }
 }
