--- a/Common.blocks/CheckboxList/-Icon/CheckboxList-Icon.scss
+++ b/Common.blocks/CheckboxList/-Icon/CheckboxList-Icon.scss
@@ -1,41 +1,53 @@
 @media only screen and (max-width: 576px) {
-  .CheckboxList {
+  .CheckboxList-Icon {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .CheckboxList {
+  .CheckboxList-Icon {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .CheckboxList {
+  .CheckboxList-Icon {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .CheckboxList {
+  .CheckboxList-Icon {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .CheckboxList {
+  .CheckboxList-Icon {
+    padding-right: 10px;
+    font-family: Material Icons;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    text-align: center;
 
+    /* Dark 50% */
+
+    color: $DarkShade50;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .CheckboxList {
+  .CheckboxList-Icon {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .CheckboxList {
+  .CheckboxList-Icon {
 
   }
 }
