--- a/Common.blocks/FormElements/-DropdownFacilities/_expanded/FormElements-DropdownFacilities_expanded.scss
+++ b/Common.blocks/FormElements/-DropdownFacilities/_expanded/FormElements-DropdownFacilities_expanded.scss
@@ -24,7 +24,7 @@
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .FormElements-DropdownFacilities_expanded {
-
+    margin-bottom: 168px;
   }
 }
 
