--- a/Common.blocks/List/-Item/List-Item.scss
+++ b/Common.blocks/List/-Item/List-Item.scss
@@ -27,7 +27,9 @@
     list-style: none;
     display: flex;
     flex-direction: row;
-    padding-top: 6px;
+    align-items: center;
+    padding-bottom: 6px;
+
   }
 }
 
