--- a/pages/index.scss
+++ b/pages/index.scss
@@ -342,3 +342,6 @@
 @import '../Common.blocks/RoomDetails/-Icon/RoomDetails-Icon';
 @import '../Common.blocks/ListItemDescr/ListItemDescr';
 @import '../Common.blocks/ListItemDescr/-Header/ListItemDescr-Header';
+@import '../Common.blocks/BodyText/_bold/BodyText_bold';
+@import '../Common.blocks/FormElements/-ExpandableCheckboxList/FormElements-ExpandableCheckboxList';
+@import '../Common.blocks/RoomDetails/-Text/RoomDetails-Text';
