--- a/Common.blocks/CheckboxList/-ExpandableCnt/CheckboxList-ExpandableCnt.scss
+++ b/Common.blocks/CheckboxList/-ExpandableCnt/CheckboxList-ExpandableCnt.scss
@@ -25,6 +25,7 @@
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .CheckboxList-ExpandableCnt {
     display: none;
+    padding-top: 10px;
   }
 }
 
