--- a/Common.blocks/RoomDetails/-Text/RoomDetails-Text.scss
+++ b/Common.blocks/RoomDetails/-Text/RoomDetails-Text.scss
@@ -1,46 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .RoomDetails {
+  .RoomDetails-Text {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .RoomDetails {
+  .RoomDetails-Text {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .RoomDetails {
+  .RoomDetails-Text {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .RoomDetails {
+  .RoomDetails-Text {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .RoomDetails {
-    @include textCentering;
-    justify-content: start;
-    flex-direction: row;
-    padding-bottom: 20px;
-    border-bottom: 1px solid $DarkShade10;
-    margin-bottom: 20px;
+  .RoomDetails-Text {
+    margin-left: 10px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .RoomDetails {
+  .RoomDetails-Text {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .RoomDetails {
+  .RoomDetails-Text {
 
   }
 }
