Checkbox buttons refactoring complete

--- a/Common.blocks/List/-Item/List-Item.scss
+++ b/Common.blocks/List/-Item/List-Item.scss
@@ -27,8 +27,8 @@
     list-style: none;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    padding-bottom: 6px;
+    align-items: start;
+    padding-bottom: 10px;
 
   }
 }
