--- a/pages/index.scss
+++ b/pages/index.scss
@@ -345,3 +345,10 @@
 @import '../Common.blocks/BodyText/_bold/BodyText_bold';
 @import '../Common.blocks/FormElements/-ExpandableCheckboxList/FormElements-ExpandableCheckboxList';
 @import '../Common.blocks/RoomDetails/-Text/RoomDetails-Text';
+@import '../Common.blocks/FormElements/-RigthWrapper/FormElements-RigthWrapper';
+@import '../Common.blocks/FormElements/-RigthWrapperForButtons/FormElements-RigthWrapperForButtons';
+@import '../Common.blocks/FormElements/-RigthWrapperForComment/FormElements-RigthWrapperForComment';
+@import '../Common.blocks/FormElements/-RigthColumn/FormElements-RigthColumn';
+@import '../Common.blocks/FormElements/-LeftColumn/FormElements-LeftColumn';
+@import '../Common.blocks/CheckboxList/-Header/_theme/CheckboxList-Header_theme_checkboxButtons';
+@import '../Common.blocks/FormElements/-CheckboxButtons/FormElements-CheckboxButtons';
