--- a/Common.blocks/CheckboxList/-Header/_theme/CheckboxList-Header_theme_checkboxButtons.scss
+++ b/Common.blocks/CheckboxList/-Header/_theme/CheckboxList-Header_theme_checkboxButtons.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .CheckboxList {
+  .CheckboxList-Header_theme_checkboxButtons {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .CheckboxList {
+  .CheckboxList-Header_theme_checkboxButtons {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .CheckboxList {
+  .CheckboxList-Header_theme_checkboxButtons {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .CheckboxList {
+  .CheckboxList-Header_theme_checkboxButtons {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .CheckboxList {
-    width: 222px;
+  .CheckboxList-Header_theme_checkboxButtons {
+    margin-bottom: 16px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .CheckboxList {
+  .CheckboxList-Header_theme_checkboxButtons {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .CheckboxList {
+  .CheckboxList-Header_theme_checkboxButtons {
 
   }
 }
