--- a/Common.blocks/FormElements/-CheckboxButtons/FormElements-CheckboxButtons.scss
+++ b/Common.blocks/FormElements/-CheckboxButtons/FormElements-CheckboxButtons.scss
@@ -1,41 +1,42 @@
 @media only screen and (max-width: 576px) {
-  .CheckboxList {
+  .FormElements-CheckboxButtons {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .CheckboxList {
+  .FormElements-CheckboxButtons {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .CheckboxList {
+  .FormElements-CheckboxButtons {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .CheckboxList {
+  .FormElements-CheckboxButtons {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .CheckboxList {
-    width: 222px;
+  .FormElements-CheckboxButtons {
+    padding-top: 4px;
+    margin-bottom: 17px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .CheckboxList {
+  .FormElements-CheckboxButtons {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .CheckboxList {
+  .FormElements-CheckboxButtons {
 
   }
 }
