--- a/Common.blocks/FormElements/-RigthWrapperForButtons/FormElements-RigthWrapperForButtons.scss
+++ b/Common.blocks/FormElements/-RigthWrapperForButtons/FormElements-RigthWrapperForButtons.scss
@@ -1,41 +1,42 @@
 @media only screen and (max-width: 576px) {
-  .CheckboxList {
+  .FormElements-RigthWrapperForButtons {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .CheckboxList {
+  .FormElements-RigthWrapperForButtons {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .CheckboxList {
+  .FormElements-RigthWrapperForButtons {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .CheckboxList {
+  .FormElements-RigthWrapperForButtons {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .CheckboxList {
-    width: 222px;
+  .FormElements-RigthWrapperForButtons {
+    display: flex;
+    flex-direction: row;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .CheckboxList {
+  .FormElements-RigthWrapperForButtons {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .CheckboxList {
+  .FormElements-RigthWrapperForButtons {
 
   }
 }
