--- a/Common.blocks/List/-Text/List-Text.scss
+++ b/Common.blocks/List/-Text/List-Text.scss
@@ -25,6 +25,7 @@
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .List-Text {
     margin-left: 10px;
+    line-height: 20px;
   }
 }
 
