Radio buttons refactoring complete

--- a/Common.blocks/RadioButtons/RadioButtons.pug
+++ b/Common.blocks/RadioButtons/RadioButtons.pug
@@ -1,4 +1,4 @@
 mixin RadioButtons(content)
-    form.RadioButtons&attributes(attributes) #{content}
+    div.RadioButtons&attributes(attributes) #{content}
         if block
             block
